Not responsive #129 //solved
required CSS added

--- a/website/static/css/docusaurus-admonitions.css
+++ b/website/static/css/docusaurus-admonitions.css
@@ -108,3 +108,7 @@
   width: 80px;
   height: 80px;
 }
+.headerTitleWithLogo{
+  display:inline-block;
+   width:100px
+}
